--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "nwidart/blogtest",
+    "name": "polansk1/blogtest-module",
+    "type": "laravel-module",
     "description": "",
     "authors": [
         {
